@startuml
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    ArrowColor #2688d4
    BorderColor #2688d4
}

entity "Users (Пользователи)" as users {
  * **user_id** : BIGSERIAL [PK]
  --
  email : VARCHAR(255) [UNIQUE]
  password_hash : VARCHAR(255)
  full_name : VARCHAR(255)
  phone : VARCHAR(20)
  role : VARCHAR(50) [guest/host/admin]
  is_verified : BOOLEAN
  verification_date : TIMESTAMP
  created_at : TIMESTAMP
}

entity "Listings (Объявления)" as listings {
  * **listing_id** : BIGSERIAL [PK]
  --
  * host_id : BIGINT [FK]
  title : VARCHAR(255)
  description : TEXT
  property_type : VARCHAR(100)
  price_per_night : DECIMAL(10,2)
  max_guests : INTEGER
  bedrooms : INTEGER
  bathrooms : DECIMAL(3,1)
  address : TEXT
  city : VARCHAR(100)
  country : VARCHAR(100)
  is_active : BOOLEAN
  created_at : TIMESTAMP
}

entity "Bookings (Бронирования)" as bookings {
  * **booking_id** : BIGSERIAL [PK]
  --
  * listing_id : BIGINT [FK]
  * guest_id : BIGINT [FK]
  start_date : DATE
  end_date : DATE
  guest_count : INTEGER
  total_price : DECIMAL(10,2)
  status : VARCHAR(50) [pending/confirmed/cancelled/completed]
  created_at : TIMESTAMP
}

entity "Reviews (Отзывы)" as reviews {
  * **review_id** : BIGSERIAL [PK]
  --
  * booking_id : BIGINT [FK, UNIQUE]
  rating : INTEGER [1..5]
  comment : TEXT
  host_response : TEXT
  response_date : TIMESTAMP
  created_at : TIMESTAMP
}

entity "Payments (Платежи)" as payments {
  * **payment_id** : BIGSERIAL [PK]
  --
  * booking_id : BIGINT [FK, UNIQUE]
  amount : DECIMAL(10,2)
  payment_date : TIMESTAMP
  payment_method : VARCHAR(50)
  status : VARCHAR(20) [pending/completed/failed/refunded]
  transaction_id : VARCHAR(100) [UNIQUE]
}

users ||--o{ listings : "размещает"
users ||--o{ bookings : "совершает"
listings ||--o{ bookings : "содержит"
bookings ||--|| reviews : "оценивается"
bookings ||--|| payments : "оплачивается"

@enduml